...
  }

  Scaffold(
    topBar = {
      TopAppBar(
        title = {
          Text(text = "Bookmark Search")
        }
      )
    },
    content = { innerPadding ->
      Box(modifier = Modifier.padding(innerPadding)) {
        SearchContent(state, events)
...
  val keyboardController = LocalSoftwareKeyboardController.current

  TextField(
    modifier = Modifier
      .fillMaxWidth()
      .focusRequester(focusRequester)
      .testTag("SearchText"),
    leadingIcon = { Icon(Icons.Filled.Search, "Search") },
    trailingIcon = {
      if (query.isNotEmpty()) {
        Box(
          modifier = Modifier.clickable { onSearchTextChanged("") }
        ) {
...
