<resources>
    <string name="app_name">Bookmark Manager</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
</resources>
