...

  if (state != null) {
    Scaffold(
      topBar = {
        TopAppBar(
          title = {
            Text(text = "Bookmarks")
          }
        )
      },
      floatingActionButton = {
        HomeFab(state!!, events)
      },
...
